# timezone-web

./: Cargo.toml  build.rs  create.sql
src/: form_types.rs  main.rs  models.rs  templates.rs
templates/: bad_session.html  get_guilds_error.html  index.html  login.html
